--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,10 @@
 = J-MCDA utils
+:gitHubUserName: oliviercailloux
 :groupId: io.github.oliviercailloux.jmcda
 :artifactId: utils
 :repository: jmcda-{artifactId}
 
-image:https://github.com/oliviercailloux/{repository}/workflows/Maven%20CI%20workflow/badge.svg?branch=master["Build Status", link="https://github.com/oliviercailloux/{repository}/actions"]
+image:https://github.com/{gitHubUserName}/{repository}/workflows/Maven%20CI%20workflow/badge.svg["Build Status", link="https://github.com/{gitHubUserName}/{repository}/actions"]
 image:https://maven-badges.herokuapp.com/maven-central/{groupId}/{artifactId}/badge.svg["Artifact on Maven Central", link="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22{groupId}%22%20a%3A%22{artifactId}%22"]
 image:http://www.javadoc.io/badge/{groupId}/{artifactId}.svg["Javadocs", link="http://www.javadoc.io/doc/{groupId}/{artifactId}"]
 
